--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "brain-games-by-ingo",
+  "name": "@hexlet/code",
   "version": "1.0.0",
-  "description": "My first project on Hexlet",
-  "type": "module",
+  "description": "This project compiles 5 console games to train your brain.",
   "main": "index.js",
+  "type": "module",
+  "bin": {
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js",
+    "brain-gcd": "bin/brain-gcd.js",
+    "brain-progression": "bin/brain-progression.js",
+    "brain-prime": "bin/brain-prime.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ingo-o/frontend-project-lvl1.git"
+    "url": "git+https://github.com/Gruf1/frontend-project-44.git"
   },
-  "author": "Dmitry Ingo Epikhin",
+  "author": "Andrey Nikonov",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Ingo-o/frontend-project-lvl1/issues"
+    "url": "https://github.com/Gruf1/frontend-project-44/issues"
   },
-  "homepage": "https://github.com/Ingo-o/frontend-project-lvl1#readme",
-  "bin": {
-    "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/brain-calc.js",
-    "brain-gcd": "bin/brain-gcd.js",
-    "brain-prog": "bin/brain-prog.js",
-    "brain-prime": "bin/brain-prime.js"
-  },
+  "homepage": "https://github.com/Gruf1/frontend-project-44#readme",
   "dependencies": {
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
-    "eslint": "^7.1.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.21.2"
+    "eslint": "^8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
