--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/Moshi231/frontend-project-44.git"
   },
-  "author": "Andrey Nikonov",
+  "author": "Magomedov Magush",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Moshi231/frontend-project-44/issues"
