--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,14 +1,13 @@
-env:
+module.exports = {
+//extends: 'airbnb',
+parser: 'babel-eslint',
+env: {
   browser: true
-  es2021: true
-  node: true
-extends: airbnb-base
-overrides: []
-parserOptions:
-  ecmaVersion: latest
-  sourceType: module
+},
+plugins: ['react'],
+  extends: ['eslint:recommended', 'plugin:react/recommended'],
 rules: {
-  no-console: 0,
-  import/extensions: 0
-}
-/*eslint linebreak-style: ["error", "unix"]*/
+no-console: 0
+import/extensions: 0
+  // overrides
+ }
